Fixed layout issue

--- a/docs/media/style.css
+++ b/docs/media/style.css
@@ -92,7 +92,7 @@ h6 {
 
 .hello-separator {
     border-top: 1px solid #dedede;
-    margin: 2em -2em;
+    margin: 2em -1em;
 }
 
 .hello {
